app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invo
  template:
    metadata:
      labels:
        app: invo
    spec:
      containers:
      - name: myapp
        image: fakeregistry/invo:latest
        resources:
          limits:
            memory: "1G"
            cpu: "500m"
        ports:
        - containerPort: 80
