app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invo
spec:
  type: ClusterIP
  selector:
    app: invo
  ports:
    - protocol: TCP
      port: 80
